kubernetes/main/apps/system/unifi/nap/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-console
  namespace: system
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      name: admin
    - protocol: TCP
      port: 8080
      name: controller
    - protocol: TCP
      port: 8880
      name: portal-http
    - protocol: TCP
      port: 8843
      name: portal-https
    - protocol: TCP
      port: 6789
      name: speedtest
    - protocol: UDP
      port: 3478
      name: stun
    - protocol: UDP
      port: 5514
      name: syslog
    - protocol: UDP
      port: 10001
      name: discovery
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi-console
  namespace: system
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - port: 443
        protocol: TCP
        name: admin
