kubernetes/main/apps/system/unifi/nap/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: unifi-console
  namespace: system
spec:
  ingressClassName: internal
  rules:
    - host: &host unifi.garb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-console
                port:
                  number: 443
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
